
**    Add context->time() and context->timeInc() API calls, to set simulation time.
      These now are recommended in place of the legacy sc_time_stamp().

****  --inhibit-sim is planned for deprecation, file a bug if this is still being used.

****  Fix range inheritance on port without data type (#2753). [Embedded Go]

****  Fix slice-assign overflow (#2803) (#2811). [David Turner]


* Verilator 4.110 2021-02-25

***   Optimize bit operations and others (#2186) (#2632) (#2633) (#2751) (#2800) [Yutetsu TAKATSUKASA]

****  Support concat selection (#2721).

****  Support struct scopes when dumping structs to VCD (#2776) [Alex Torregrosa]

****  Generate SELRANGE for potentially unreachable code (#2625) (#2754) [Pierre-Henri Horrein]

****  For --flatten, override inlining of public and no_inline modules (#2761) [James Hanlon]

****  Fix little endian interface pin swizzling (#2475). [Don Owen]

****  Fix range inheritance on port without data type (#2753). [Embedded Go]

****  Fix TIMESCALE warnings on primitives (#2763). [Xuanqi]

****  Fix to exclude strings from toggle coverage (#2766) (#2767) [Paul Wright]

****  Fix $fread extra semicolon inside statements. [Leendert van Doorn]

****  Fix class extends with VM_PARALLEL_BUILDS (#2775). [Iru Cai]

****  Fix shifts by > 32 bit values (#2785). [qrq992]

****  Fix examples not flushing vcd (#2787). [Richard E George]

****  Fix little endian packed array pattern assignment (#2795). [Alex Torregrosa]


* Verilator 4.108 2021-01-10

**    Many VPI changes for IEEE compatibility, which may alter behavior from previous releases.

**    Support randomize() class method and rand (#2607). [Krzysztof Bieganski]

***   Support $cast and new CASTCONST warning.

***   Add --top option as alias of --top-module.

***   Add LATCH and NOLATCH warnings (#1609) (#2740). [Julien Margetts]

****  Remove Unix::Processors internal test dependency.
